--- a/templates/getvac/post_detail.html
+++ b/templates/getvac/post_detail.html
@@ -2,13 +2,13 @@
 {% block title %}СтимИД {{ post|truncatechars:30 }}{% endblock %}
 {% block content %}
 <div class="row">
-  <aside class="col-12 col-md-3">
+    <aside class="col-12 col-md-3">
     <div class="card" style="width: 20rem;">
-    <img src={{ steamid_status.response.players.0.avatarfull }} class="card-img-top" alt="...">
+    <img src={{ steamids1.0.avatarfull }} class="card-img-top" alt="...">
     <div class="card-body">
-        <h5 class="card-title">{{ steamid_status.response.players.0.personaname }}</h5>
+        <h5 class="card-title">{{ steamids1.0.personaname }}</h5>
         <p class="card-text">Статус VAC:
-            {% if vacstatus.players.0.VACBanned %}
+            {% if vacstatus.0.VACBanned == 'True' %}
             <strong style="color:#FF0000">
             Блокировка VAC
             </strong>
@@ -19,7 +19,7 @@
             {% endif %}
         </p>
         <p class="card-text">Бан Сообщества:
-            {% if vacstatus.players.0.CommunityBanned %}
+            {% if vacstatus.0.CommunityBanned == 'True' %}
             <strong style="color:#FF0000">
             Забанен
             </strong>
@@ -32,38 +32,38 @@
         <p class="card-text">Число VAC банов:
             {% if vacstatus.players.0.NumberOfVACBans %}
             <strong style="color:#FF0000">
-            {{ vacstatus.players.0.NumberOfVACBans }}
+            {{ vacstatus.0.NumberOfVACBans }}
             </strong>
             {% else %}
             <strong style="color:#7fff00">
-            {{ vacstatus.players.0.NumberOfVACBans }}
+            {{ vacstatus.0.NumberOfVACBans }}
             </strong>
             {% endif %}
         </p>
         <p class="card-text">Дней в бане:
             {% if vacstatus.players.0.DaysSinceLastBan > 0 %}
             <strong style="color:#FF0000">
-            {{ vacstatus.players.0.DaysSinceLastBan }}
+            {{ vacstatus.0.DaysSinceLastBan }}
             </strong>
             {% else %}
             <strong style="color:#7fff00">
-            {{ vacstatus.players.0.DaysSinceLastBan }}
+            {{ vacstatus.0.DaysSinceLastBan }}
             </strong>
             {% endif %}
         </p>
         <p class="card-text">Число игровых банов:
             {% if vacstatus.players.0.NumberOfGameBans > 0 %}
             <strong style="color:#FF0000">
-            {{ vacstatus.players.0.NumberOfGameBans }}
+            {{ vacstatus.0.NumberOfGameBans }}
             </strong>
             {% else %}
             <strong style="color:#7fff00">
-            {{ vacstatus.players.0.NumberOfGameBans }}
+            {{ vacstatus.0.NumberOfGameBans }}
             </strong>
             {% endif %}
         </p>
         <p class="card-text">Трейд Бан:
-            {% if vacstatus.players.0.EconomyBan != 'none' %}
+            {% if vacstatus.0.EconomyBan != 'none' %}
             <strong style="color:#FF0000">
             Да
             </strong>
@@ -73,21 +73,22 @@
             </strong>
             {% endif %}
         </p>
-        <a href={{ steamid_status.response.players.0.profileurl }} class="btn btn-primary" target="_blank">Посмотреть профиль</a>
+        <a href={{ steamids1.0.profileurl }} class="btn btn-primary" target="_blank">Посмотреть профиль</a>
     </div>
     </div>
     <hr>
     <div class="card" style="width: 20rem;">
     <ul class="list-group list-group-flush">
         <li class="list-group-item">Разместил: {% if requser.get_full_name %}{{ requser.get_full_name }}{% else %} {{ requser }} {% endif %}</p></li>
-        <li class="list-group-item">Количество записей: {{ posts_count }}</p></li>
+        <li class="list-group-item">Отслеживаемых профилей: {{ posts_count }}</p></li>
     </ul>
     </div>
   </aside>
   <article class="col-12 col-md-9">
     {% include 'includes/info.html' %}
+    <hr>
     {% if post.author == requser %}
-    <a class="btn btn-primary" href="{% url 'getvac:edit' post.id %}">редактировать запись</a>
+        <a class="btn btn-primary" href="{% url 'getvac:edit' post.id %}">редактировать запись</a>
     {% endif %}
   </article>
 </div>
