--- a/templates/includes/info.html
+++ b/templates/includes/info.html
@@ -1,111 +1,59 @@
-    <form>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">steamid:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.steamid }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">communityvisibilitystate:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.communityvisibilitystate }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">profilestate:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.profilestate }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">personaname:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.personaname }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">commentpermission:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.commentpermission }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">profileurl:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.profileurl }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">avatar:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.avatar }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">avatarmedium:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.avatarmedium }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">avatarfull:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.avatarfull }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">avatarhash:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.avatarhash }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">lastlogoff:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.lastlogoff }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">personastate:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.personastate }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">realname:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.realname }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">primaryclanid:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.primaryclanid }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">timecreated:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.timecreated }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">personastateflags:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.personastateflags }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">loccountrycode:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.loccountrycode }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">locstatecode:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.locstatecode }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">loccityid:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ steamid_status.response.players.0.loccityid }}">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-    <hr>
-    <form>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">steamid:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ vacstatus.players.0.SteamId }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">CommunityBanned:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ vacstatus.players.0.CommunityBanned }}">
-        </div> 
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">VACBanned:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ vacstatus.players.0.VACBanned }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">NumberOfVACBans:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ vacstatus.players.0.NumberOfVACBans }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">DaysSinceLastBan:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ vacstatus.players.0.DaysSinceLastBan }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">NumberOfGameBans:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ vacstatus.players.0.NumberOfGameBans }}">
-        </div>
-        <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">EconomyBan:</span>
-            <input type="text" class="form-control" placeholder="None" aria-label="None" aria-describedby="basic-addon1" value="{{ vacstatus.players.0.EconomyBan }}">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+<div class="card">
+    <div class="card-body">
+        <p><strong>Дата публикации</strong>: {{ steamids1.0.pub_date|date:"d.m.Y" }}</p>
+        <p>SteamID: <a href="https://steamcommunity.com/profiles/{{ steamids1.0.steamid }}" target="_blank">{{ steamids1.0.steamid }}</a></p>
+
+        {% if steamids1.0.personastate == '0' %}
+            <p>Статус: Offline</p>
+        {% elif steamids1.0.personastate == '1' %}
+            <p>Статус: Online</p>
+        {% elif steamids1.0.personastate == '2' %}
+            <p>Статус: Busy</p>
+        {% elif steamids1.0.personastate == '3' %}
+            <p>Статус: Away</p>
+        {% elif steamids1.0.personastate == '4' %}
+            <p>Статус: Snooze</p>
+        {% elif steamids1.0.personastate == '5' %}
+            <p>Статус: looking to trade</p>
+        {% elif steamids1.0.personastate == '6' %}
+            <p>Статус: looking to play</p>
+        {% endif%}
+        
+        {% if steamids1.0.communityvisibilitystate == '1' %}
+            <p>Профиль: Скрытый
+        {% elif steamids1.0.communityvisibilitystate == '3' %}
+            <p>Профиль: Открытый</p>
+        {% endif%}
+
+        {% if steamids1.0.profilestate == '1' %}
+            <p>Профиль: Настроен
+        {% else %}
+            <p>Профиль: Не настроен</p>
+        {% endif%}
+
+        <p>Имя: {{ steamids1.0.personaname }}</p>
+
+        <p>commentpermission: {{ steamids1.0.commentpermission }}</p>
+        
+        <p>Ссылка на профиль: <a href="{{ steamids1.0.profileurl }}" target="_blank">{{ steamids1.0.profileurl }}</a></p>
+        
+        {% if steamids1.0.lastlogoff == 'None' %}
+        {% else %}
+        <p>lastlogoff: {{ steamids1.0.lastlogoff }}</p>
+        {% endif%}
+        
+        {% if steamids1.0.personastate == 'None' %}{% else %} <p>personastate: {{ steamids1.0.personastate }}</p> {% endif%}
+        {% if steamids1.0.realname == 'None' %}{% else %} <p>realname: {{ steamids1.0.realname }}</p> {% endif%}
+        {% if steamids1.0.primaryclanid == 'None' %}{% else %} <p>primaryclanid: {{ steamids1.0.primaryclanid }}</p> {% endif%}
+        {% if steamids1.0.timecreated == 'None' %}{% else %} <p>timecreated: {{ steamids1.0.timecreated }}</p> {% endif%}
+        {% if steamids1.0.personastateflags == 'None' %}{% else %} <p>personastateflags: {{ steamids1.0.personastateflags }}</p> {% endif%}
+        {% if steamids1.0.loccountrycode == 'None' %}{% else %} <p>loccountrycode: {{ steamids1.0.loccountrycode }}</p> {% endif%}
+        {% if steamids1.0.locstatecode == 'None' %}{% else %} <p>locstatecode: {{ steamids1.0.locstatecode }}</p> {% endif%}
+        {% if steamids1.0.loccityid == 'None' %}{% else %} <p>loccityid: {{ steamids1.0.loccityid }}</p> {% endif%}
+        
+        {% if steamids1.0.timecreated == 'None' %}
+        {% else %}
+        <p>timecreated: {{ steamids1.0.timecreated }}</p>
+        {% endif%}
+    </div>
+</div>
